fixed article misalignment, adding styles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1406,7 +1406,7 @@ body.dark-theme {
 
   .about__shadow {
     width: 240px;
-    height: 615px;
+    height: 30px;
     top: -4.5rem;
     right: -5.5rem;
     border-bottom: 6px solid var(--first-color);
@@ -1468,12 +1468,49 @@ body.dark-theme {
   }
 
   .services__container {
-    grid-template-columns: repeat(3, 282px);
+    grid-template-columns: repeat(4, 282px);
     column-gap: 5rem;
     padding-block: 3rem 5rem;
   }
 
-  .services__card
+  .services__content {
+    padding: 6.5rem 1.5rem 3.5rem;
+    border: 6px solid var(--black-color);
+  }
+
+  .services__icon i {
+    font-size: 3rem;
+  }
+
+  .services__box {
+    width: 32px;
+    height: 32px;
+  }
+
+  .services__title {
+    margin-bottom: 1.5rem;
+  }
+
+  .services__card:hover .services__border {
+    transform: translate(1.25rem, 1.25rem)
+  }
+
+  .projects__container {
+    grid-template-columns: repeat(3, 352px);
+    padding-block: 3rem 1rem;
+  }
+
+  .projects__card {
+    padding: 1.25rem 1.25rem 2.5rem;
+  }
+
+  .projects__image {
+    margin-bottom: 1rem;
+  }
+
+  .projects__content {
+    margin-bottom: 2rem;
+  }
 
 
 
